@@ -33,6 +33,8 @@ public interface WebFacade {
 
     HttpSession getSession();
     Map<String, Object> getSessionAttributes();
+    /** Get the token to include in all POST requests with the name moquiSessionToken (in the session as 'moqui.session.token') */
+    String getSessionToken();
 
     ServletContext getServletContext();
     Map<String, Object> getApplicationAttributes();
