@@ -136,13 +136,16 @@ along with this software (see the LICENSE.md file). If not, see
             <xs:attribute name="https-host" type="xs:string"/>
             <xs:attribute name="http-port" type="xs:string"/>
             <xs:attribute name="http-host" type="xs:string"/>
+            <xs:attribute name="require-session-token" default="true" type="boolean"><xs:annotation><xs:documentation>
+                If not false (default true) moquiSessionToken (from ec.web.sessionToken) must be passed to all
+                screen/transition requests in a session after the first.</xs:documentation></xs:annotation></xs:attribute>
             <!-- Content URL prefixes to make it easy to move the serving load for static content to other machines -->
-            <!-- TODO use in code -->
-            <xs:attribute name="content-prefix-secure" type="xs:string"/>
-            <!-- TODO use in code -->
-            <xs:attribute name="content-prefix-standard" type="xs:string"/>
-            <!-- TODO use in code -->
-            <xs:attribute name="cookie-domain" type="xs:string"/>
+            <!-- TODO use in code
+            <xs:attribute name="content-prefix-secure" type="xs:string"/> -->
+            <!-- TODO use in code
+            <xs:attribute name="content-prefix-standard" type="xs:string"/> -->
+            <!-- TODO use in code
+            <xs:attribute name="cookie-domain" type="xs:string"/> -->
         </xs:complexType>
     </xs:element>
     <xs:element name="root-screen">
